added data api and celery

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -18,3 +18,74 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=http://%(ENV_INET_HTTP_SERVER_HOST)s:%(ENV_INET_HTTP_SERVER_PORT)s
 username=%(ENV_user)s
 password=%(ENV_password)s
+
+[program:database]
+environment=PYTHONPATH=/home/%(ENV_user)s/src/video_buffer
+command=python3 manage.py runserver %(ENV_DJANGO_ADMIN_HOST)s:%(ENV_DJANGO_ADMIN_PORT)s
+directory=/home/%(ENV_user)s/src/video_buffer
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/database.err.log
+stdout_logfile=/var/log/database.out.log
+
+[program:data_endpoint]
+environment=PYTHONPATH=/home/%(ENV_user)s/src/video_buffer
+command=/bin/bash -c "source /opt/ros/$ROS_DISTRO/setup.bash && python3 data_reader/main.py"
+directory=/home/%(ENV_user)s/src/video_buffer
+user=%(ENV_user)s
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/data_endpoint.err.log
+stdout_logfile=/var/log/data_endpoint.out.log
+
+[program:data_server]
+environment=PYTHONPATH=/home/%(ENV_user)s/src/video_buffer
+command=/bin/bash -c "python3 data_reader/interface/grpc/server.py"
+directory=/home/%(ENV_user)s/src/video_buffer
+user=%(ENV_user)s
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/data_server.err.log
+stdout_logfile=/var/log/data_server.out.log
+
+[program:beat]
+environment=PYTHONPATH=/home/%(ENV_user)s/src/video_buffer
+command=celery -A main.celery beat --loglevel=info
+directory=/home/%(ENV_user)s/src/video_buffer/generate_video
+user=%(ENV_user)s
+autostart=false
+autorestart=true
+stderr_logfile=/var/log/celery_beat.err.log
+stdout_logfile=/var/log/celery_beat.out.log
+
+[program:consumer]
+environment=PYTHONPATH=/home/%(ENV_user)s/src/video_buffer
+command=celery -A main.celery worker --loglevel=info -Q %(ENV_QUEUE_NAME)s
+directory=/home/%(ENV_user)s/src/video_buffer/generate_video
+user=%(ENV_user)s
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/celery_consumer.err.log
+stdout_logfile=/var/log/celery_consumer.out.log
+
+[program:flower]
+environment=PYTHONPATH=/home/%(ENV_user)s/src/video_buffer
+command=celery -A main.celery flower --port=%(ENV_FLOWER_PORT)s
+directory=/home/%(ENV_user)s/src/video_buffer/generate_video
+user=%(ENV_user)s
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/flower.err.log
+stdout_logfile=/var/log/flower.out.log
+
+################################################################
+#################### DATA ACQUISITION ##########################
+################################################################
+[group:data_acquisition]
+programs=data_server,data_endpoint
+
+################################################################
+######################## Generate Video ########################
+################################################################
+[group:generate_video]
+programs=beat,consumer,flower
