added data_api to supervisor

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -78,6 +78,15 @@ autorestart=true
 stderr_logfile=/var/log/flower.err.log
 stdout_logfile=/var/log/flower.out.log
 
+[program:data_api]
+environemt=PYTHONPATH=/home/%(ENV_user)s/src/video_buffer
+command=gunicorn -w 4 -k uvicorn.workers.UvicornWorker data_api.main:app -b %(ENV_DATA_API_HOST)s:%(ENV_DATA_API_PORT)s
+directory=/home/%(ENV_user)s/src/video_buffer
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/data_api.err.log
+stdout_logfile=/var/log/data_api.out.log
+
 ################################################################
 #################### DATA ACQUISITION ##########################
 ################################################################
