added app to clean up expired files

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -87,6 +87,26 @@ autorestart=true
 stderr_logfile=/var/log/data_api.err.log
 stdout_logfile=/var/log/data_api.out.log
 
+[program:cleanup_beat]
+environment=PYTHONPATH=/home/%(ENV_user)s/src/video_buffer
+command=celery -A main.celery beat --loglevel=info
+directory=/home/%(ENV_user)s/src/video_buffer/cleanup
+user=%(ENV_user)s
+autostart=false
+autorestart=true
+stderr_logfile=/var/log/cleanup_beat.err.log
+stdout_logfile=/var/log/cleanup_beat.out.log
+
+[program:cleanup_consumer]
+environment=PYTHONPATH=/home/%(ENV_user)s/src/video_buffer
+command=celery -A main.celery worker --loglevel=info -Q %(ENV_CLEANUP_QUEUE_NAME)s
+directory=/home/%(ENV_user)s/src/video_buffer/cleanup
+user=%(ENV_user)s
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/cleanup_consumer.err.log
+stdout_logfile=/var/log/cleanup_consumer.out.log
+
 ################################################################
 #################### DATA ACQUISITION ##########################
 ################################################################
@@ -98,3 +118,9 @@ programs=data_server,data_endpoint
 ################################################################
 [group:generate_video]
 programs=beat,consumer,flower
+
+################################################################
+########################### CLEAN UP ###########################
+################################################################
+[group:cleanup]
+programs=cleanup_beat,cleanup_consumer
